# DEVOPS-CLOUD

./: README.md
01_poetry-helloworld-container/: Dockerfile.dev  pyproject.toml
02_poetry-fastapi-container/fastapi-poetry/fastapi_poetry/: main.py
03_fastapi_with_testing/: Readme.md
03_fastapi_with_testing/tests/: test_first.py
Docker/: README.md
Docker/01_poetry-helloworld-container/docker_practice/: endpoints.py  main.py
Docker/02_poetry-fastapi-container/fastapi-poetry/: Dockerfile.dev  pyproject.toml
Docker/03_fastapi_with_testing/: Dockerfile  pyproject.toml
Docker/04_Multi_Layer_Image/: Dockerfile  main.py
Docker/05_Docker_Compose/: Dockerfile  README.md  compose.yml  main.py  pyproject.toml
Docker/06_Docker_Compose_Multi_Container/: compose.yml
Docker/06_Docker_Compose_Multi_Container/lahore-hello-code/: .env  Dockerfile  pyproject.toml
Docker/06_Docker_Compose_Multi_Container/lahore-hello-code/src/: main.py
Docker/06_Docker_Compose_Volume/: compose.yml
Docker/06_Docker_Compose_Volume/lahore-hello-code/: Dockerfile
Docker/06_Docker_Compose_Volume/lahore-hello-code/src/: main.py
