[tool.poetry]
name = "04-multi-layer-image"
version = "0.1.0"
description = ""
authors = ["talha <talha@talha.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
