[tool.poetry]
name = "fastapi-poetry"
version = "0.1.0"
description = ""
authors = ["talha <talha@23.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic =  "^2.7.1"
fastapi = {extras = ["all"], version = "^0.110.2"}
pytest = "^8.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
